--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">👨🏾‍💻 Intro</h2>
-				<!--<span class="image main"><img src="images/askmeanything.png" alt="" /></span>-->
+
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/anini-amoakon/" target="_blank"
 							class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -142,93 +142,126 @@
 				<div class="education-grid">
 
 					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/USB logo.jpeg" alt="Université de Saint-Boniface Logo"
-									class="education-logo">
+						<div class="flip-card-inner">
+							<!-- Front side of the card -->
+							<div class="flip-card-front education-details">
+								<div class="education-logo-container">
+									<img src="images/USB logo.jpeg" alt="Université de Saint-Boniface Logo"
+										class="education-logo">
+								</div>
+								<hr class="divider">
+								<div class="education-content">
+									<h5 class="education-title">Computer Science</h5>
+									<p class="education-institution">Université de Saint-Boniface 🇨🇦</p>
+									<p class="education-date">2018</p>
+									<p class="education-degree">Diploma</p>
+								</div>
 							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">Computer Science</h5>
-								<p class="education-institution">Université de Saint-Boniface 🇨🇦</p>
-								<p class="education-date">2018</p>
-								<p class="education-degree">Diploma</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/EST logo.jpeg" alt="Ecole Supérieur de Technologie Logo"
-									class="education-logo">
-							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">Network & Telecom</h5>
-								<p class="education-institution">Ecole Supérieur de Technologie 🇨🇮</p>
-								<p class="education-date">2016</p>
-								<p class="education-degree">Advanced Technical Diploma</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/FCC logo.png" alt="FreeCodeCamp Logo" class="education-logo">
-							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">Data Analysis - Python</h5>
-								<p class="education-institution">FreeCodeCamp</p>
-								<p class="education-date">2023</p>
-								<p class="education-degree">Professional certificate</p>
+							<!-- Back side of the card -->
+							<div class="flip-card-back">
+								<div class="education-content">
+									<ul class="subjects-list">
+										<li>Network Administration</li>
+										<li>IT Project Management</li>
+										<li>Database Management</li>
+										<li>Servers Administration</li>
+										<li>Cloud Apps & Visualization</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/Google logo.png" alt="Google Logo" class="education-logo">
+						<div class="flip-card-inner">
+							<!-- Front side of the card -->
+							<div class="flip-card-front education-details">
+								<div class="education-logo-container">
+									<img src="images/EST logo.jpeg" alt="Ecole Supérieur de Technologie Logo"
+										class="education-logo">
+								</div>
+								<hr class="divider">
+								<div class="education-content">
+									<h5 class="education-title">Network & Telecom</h5>
+									<p class="education-institution">Ecole Supérieur de Technologie 🇨🇮</p>
+									<p class="education-date">2016</p>
+									<p class="education-degree">Advanced Technical Diploma</p>
+								</div>
 							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">Data Analytics</h5>
-								<p class="education-institution">Google</p>
-								<p class="education-date">2022</p>
-								<p class="education-degree">Professional certificate</p>
+							<!-- Back side of the card -->
+							<div class="flip-card-back">
+								<div class="education-content">
+									<ul class="subjects-list">
+										<li>Wireless Communication Systems</li>
+										<li>Transmission systems</li>
+										<li>Switching (Signaling System 7)</li>
+										<li>Telephony Networks (Lines, PSTN, PBX, VOIP)</li>
+										<li>Signal Processing and energy</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/CodeCademy logo.webp" alt="Codecademy Logo" class="education-logo">
+						<div class="flip-card-inner">
+							<!-- Front side of the card -->
+							<div class="flip-card-front education-details">
+								<div class="education-logo-container">
+									<img src="images/FCC logo.png" alt="FreeCodeCamp Logo" class="education-logo">
+								</div>
+								<hr class="divider">
+								<div class="education-content">
+									<h5 class="education-title">Data Analysis w/ Python</h5>
+									<p class="education-institution">FreeCodeCamp</p>
+									<p class="education-date">2023</p>
+									<p class="education-degree">Professional Certificate</p>
+								</div>
 							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">SQL</h5>
-								<p class="education-institution">Codecademy</p>
-								<p class="education-date">2021</p>
-								<p class="education-degree">Professional certificate</p>
+							<!-- Back side of the card -->
+							<div class="flip-card-back">
+								<div class="education-content">
+									<ul class="subjects-list">
+										<li>Jupyter NB for Data Analysis</li>
+										<li>Numpy for Data Operations</li>
+										<li>Working with Pandas DataFrames</li>
+										<li>Data Cleaning Techniques</li>
+										<li>Data Access Techniques</li>
+										<li>Python Libraries For Analysis</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
 
+
 					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/CodeCademy logo.webp" alt="Codecademy Logo" class="education-logo">
+						<div class="flip-card-inner">
+							<!-- Front side of the card -->
+							<div class="flip-card-front education-details">
+								<div class="education-logo-container">
+									<img src="images/CodeCademy logo.webp" alt="Codecademy Logo" class="education-logo">
+								</div>
+								<hr class="divider">
+								<div class="education-content">
+									<h5 class="education-title">SQL and PYTHON 3</h5>
+									<p class="education-institution">Codecademy</p>
+									<p class="education-date">2021</p>
+									<p class="education-degree">Professional Certificate</p>
+								</div>
 							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">Python 3</h5>
-								<p class="education-institution">Codecademy</p>
-								<p class="education-date">2021</p>
-								<p class="education-degree">Professional certificate</p>
+							<!-- Back side of the card -->
+							<div class="flip-card-back">
+								<div class="education-content">
+									<ul class="subjects-list">
+										<li>SQL Data Manipulation & Queries</li>
+										<li>Aggregate SQL Functions</li>
+										<li>Python Intro</li>
+										<li>Python Control Flow and Logic</li>
+										<li>Python Data Structures</li>
+										<li>Python Advanced Functions</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -243,52 +276,98 @@
 								<h5 class="education-title">SQL</h5>
 								<p class="education-institution">Wealthsimple</p>
 								<p class="education-date">2022</p>
-								<p class="education-degree">Professional development</p>
+								<p class="education-degree">Professional Development</p>
 							</div>
 						</div>
 					</div>
 
 					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/itilv4.png" alt="AXELOS ITIL V4 Logo" class="education-logo">
+						<div class="flip-card-inner">
+							<!-- Front side of the card -->
+							<div class="flip-card-front education-details">
+								<div class="education-logo-container">
+									<img src="images/itilv4.png" alt="AXELOS ITIL V4 Logo" class="education-logo">
+								</div>
+								<hr class="divider">
+								<div class="education-content">
+									<h5 class="education-title">ITIL V4</h5>
+									<p class="education-institution">AXELOS</p>
+									<p class="education-date">2020</p>
+									<p class="education-degree">Professional Certificate</p>
+								</div>
 							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">ITIL V4</h5>
-								<p class="education-institution">AXELOS</p>
-								<p class="education-date">2020</p>
-								<p class="education-degree">Professional certificate</p>
+							<!-- Back side of the card -->
+							<div class="flip-card-back">
+								<div class="education-content">
+									<ul class="subjects-list">
+										<li>Service Management Concepts</li>
+										<li>Core ITIL Principles</li>
+										<li>The 4 Dimensions of Service Management</li>
+										<li>Key Terminologies Across 15 ITIL Practices</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/thecommons.jpeg" alt="Google Logo" class="education-logo">
+						<div class="flip-card-inner">
+							<!-- Front side of the card -->
+							<div class="flip-card-front education-details">
+								<div class="education-logo-container">
+									<img src="images/thecommons.jpeg" alt="Google Logo" class="education-logo">
+								</div>
+								<hr class="divider">
+								<div class="education-content">
+									<h5 class="education-title">Product Management</h5>
+									<p class="education-institution">TheCommons</p>
+									<p class="education-date">2023</p>
+									<p class="education-degree">Professional Certificate</p>
+								</div>
 							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">Product Management</h5>
-								<p class="education-institution">TheCommons</p>
-								<p class="education-date">2023</p>
-								<p class="education-degree">Professional certificate</p>
+							<!-- Back side of the card -->
+							<div class="flip-card-back">
+								<div class="education-content">
+									<ul class="subjects-list">
+										<li>Product Vision</li>
+										<li>User Journey Mapping</li>
+										<li>Roadmap Planning</li>
+										<li>Prioritization Frameworks</li>
+										<li>Product Feature Launch</li>
+										<li>Experimentation & Roll-out</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="education">
-						<div class="education-details">
-							<div class="education-logo-container">
-								<img src="images/loading.gif" alt="Google Logo" class="education-logo">
+						<div class="flip-card-inner">
+							<!-- Front side of the card -->
+							<div class="flip-card-front education-details">
+								<div class="education-logo-container">
+									<img src="images/loading.gif" alt="Google Logo" class="education-logo">
+								</div>
+								<hr class="divider">
+								<div class="education-content">
+									<h5 class="education-title">Advanced Data Analytics</h5>
+									<p class="education-institution">Google | Coursera</p>
+									<p class="education-date">2024</p>
+									<p class="education-degree">⏳ In progress</p>
+								</div>
 							</div>
-							<hr class="divider">
-							<div class="education-content">
-								<h5 class="education-title">Advanced Data Analytics</h5>
-								<p class="education-institution">Google</p>
-								<p class="education-date">2024</p>
-								<p class="education-degree">⏳ In progress</p>
+							<!-- Back side of the card -->
+							<div class="flip-card-back">
+								<div class="education-content">
+									<ul class="subjects-list">
+										<li>Foundations of Data Science</li>
+										<li>Python</li>
+										<li>Translate Data into Insights</li>
+										<li>The Power of Statistics</li>
+										<li>Regression Analysis</li>
+										<li>Essentials of Machine Learning</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -297,7 +376,8 @@
 
 				<h4>Personal Interests</h4>
 				<p>
-					Family-oriented, soccer lover, music enthusiast, engineering documentaries, creating memories with
+					Family-oriented, soccer lover, music enthusiast, engineering documentaries, creating memories
+					with
 					loved ones, and exploring diverse cultures and landscapes bring me joy and fulfillment.
 				</p>
 			</article>
