Update index page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		function trackMeButtonClick() {
 			gtag('event', 'Button_Click', {
 				'event_category': 'Button',
-				'event_label': 'Me',
+				'event_label': 'Intro',
 			});
 		}
 
@@ -47,7 +47,7 @@
 		function trackResumeButtonClick() {
 			gtag('event', 'Button_Click', {
 				'event_category': 'Button',
-				'event_label': 'Resume',
+				'event_label': 'Connect',
 			});
 		}
 
@@ -60,12 +60,12 @@
 		}
 
 		// Function to track resume downloads
-		function trackResumeDownload() {
+		/*function trackResumeDownload() {
 			gtag('event', 'Resume_Download', {
 				'event_category': 'Resume',
 				'event_label': 'Download',
 			});
-		}
+		}*/
 
 	</script>
 
