Updated index file

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<img src="images/Profilepic02.png" alt="Profile Picture">
+				<span class="icon fa-gem"></span>
 			</div>
 			<div class="content">
 				<div class="inner">
@@ -651,8 +651,6 @@
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/anini-amoakon/" target="_blank"
 							class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/Anini-A" target="_blank" class="icon brands fa-github"><span
-								class="label">GitHub</span></a></li>
 				</ul>
 			</article>
 
