--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="inner">
 					<h1>Anini</h1>
 					<h2>Senior IT analyst & Data analyst</h2>
-					<p>I'm passionate about 📊 Data Analysis, ⚙️ IT Systems & Services, and ☑️ user experience
+					<p>I'm passionate about Data Analysis 📊, IT Systems & Services ⭐, and user experience 
 					</p>
 				</div>
 			</div>
