--- a/index.html
+++ b/index.html
@@ -550,10 +550,10 @@
 										href="https://youtu.be/_qReGTOrKTk" target="_blank">Stanley Youtube
 										video</a></u> by <u><a
 										href="https://public.tableau.com/app/profile/stanley.george.joseph"
-										target="_blank">Stanley George Joseph</a></u></p>
+										target="_blank">Stanley G.</a></u></p>
 							<div class="project-date">04-17-2023</div>
 							<div class="read-more">
-								<a href="https://public.tableau.com/app/profile/anini7720/viz/CustomerAnalysis_168110020202399650/SalesAnalysis"
+								<a href="https://public.tableau.com/views/CustomerAnalysis_16811002399650/SalesAnalysis?:language=fr-FR&:sid=&:display_count=n&:origin=viz_share_link"
 									class="read-more-link" target="_blank"
 									onclick="trackReadMoreClick('Sales Analysis with Tableau')">
 									<span class="fa fa-folder-open"></span> Read more </a>
