--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 										target="_blank">Stanley G.</a></u></p>
 							<div class="project-date">04-17-2023</div>
 							<div class="read-more">
-								<a href="https://public.tableau.com/views/CustomerAnalysis_16811002399650/SalesAnalysis?:language=fr-FR&:sid=&:display_count=n&:origin=viz_share_link"
+								<a href="https://public.tableau.com/shared/BZRMPD5D7?:display_count=n&:origin=viz_share_link"
 									class="read-more-link" target="_blank"
 									onclick="trackReadMoreClick('Sales Analysis with Tableau')">
 									<span class="fa fa-folder-open"></span> Read more </a>
