Update index.html with new info

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="inner">
 					<h1>Anini</h1>
 					<h2>Senior IT analyst & Data analyst</h2>
-					<p>I'm passionate about Data Analysis 📊, IT Systems & Services ⚙️, and user experience ✨ 
+					<p>I'm passionate about Data Analysis 📊, IT Systems & Services ⚙️, and user experience ✨
 					</p>
 				</div>
 			</div>
@@ -117,14 +117,18 @@
 
 				<h4>Professional Experience</h4>
 				<p>
-					Experienced IT and Data Analyst with 4+ years of proven expertise in driving operational efficiency
-					and fostering business growth.
-					Leveraging a solid foundation in Computer Science, I excel in IT analysis to uncover insights,
-					optimize processes, and deploy cutting-edge tech solutions. <br>
-					My journey as a Data Analyst is marked by ongoing skill refinement through hands-on projects,
-					detailed in the project portfolio.
-					Committed to lifelong learning, I deliver adaptable solutions meeting dynamic organizational
-					needs.<br>
+					As an experienced Senior IT Analyst with 4+ years of expertise in both hardware and software, I have
+					a proven track record of driving operational efficiency and supporting business growth. My strong
+					foundation in Computer Science has enabled me to excel in IT analysis, optimizing processes, and
+					deploying innovative technology solutions.
+					<br>
+					Now, as I transition into Data Analytics, I am building on my analytical skills through hands-on
+					projects that bridge my IT background with data-driven decision-making. Detailed insights into my
+					journey can be found in the <a href="https://anini-a.github.io/web/#projects"
+						target="_blank"><span>project portfolio</span></a> section.
+					<br>
+					Committed to lifelong learning, I am dedicated to delivering adaptable, data-driven solutions that
+					meet the evolving needs of organizations.
 				</p>
 
 				<h4>Area of expertise</h4>
@@ -346,26 +350,25 @@
 							<!-- Front side of the card -->
 							<div class="flip-card-front education-details">
 								<div class="education-logo-container">
-									<img src="images/loading.gif" alt="Google Logo" class="education-logo">
+									<img src="images/Google logo.png" alt="Google Logo" class="education-logo">
 								</div>
 								<hr class="divider">
 								<div class="education-content">
-									<h5 class="education-title">Advanced Data Analytics</h5>
+									<h5 class="education-title">Data Analytics</h5>
 									<p class="education-institution">Google | Coursera</p>
 									<p class="education-date">2024</p>
-									<p class="education-degree">⏳ In progress</p>
+									<p class="education-degree">Professional Certificate</p>
 								</div>
 							</div>
 							<!-- Back side of the card -->
 							<div class="flip-card-back">
 								<div class="education-content">
 									<ul class="subjects-list">
-										<li>Foundations of Data Science</li>
-										<li>Python</li>
+										<li>Clean and Prepare Data</li>
+										<li>Analyze Data With Python</li>
+										<li>Create vidual Reports</li>
 										<li>Translate Data into Insights</li>
-										<li>The Power of Statistics</li>
-										<li>Regression Analysis</li>
-										<li>Essentials of Machine Learning</li>
+										<li>Apply Machine Learning Basics</li>
 									</ul>
 								</div>
 							</div>
