--- a/index.html
+++ b/index.html
@@ -117,18 +117,11 @@
 
 				<h4>Professional Experience</h4>
 				<p>
-					As an experienced Senior IT Analyst with 4+ years of expertise in both hardware and software, I have
-					a proven track record of driving operational efficiency and supporting business growth. My strong
-					foundation in Computer Science has enabled me to excel in IT analysis, optimizing processes, and
-					deploying innovative technology solutions.
-					<br>
-					Now, as I transition into Data Analytics, I am building on my analytical skills through hands-on
-					projects that bridge my IT background with data-driven decision-making. Detailed insights into my
-					journey can be found in the <a href="https://anini-a.github.io/web/#projects"
-						target="_blank"><span>project portfolio</span></a> section.
-					<br>
-					Committed to lifelong learning, I am dedicated to delivering adaptable, data-driven solutions that
-					meet the evolving needs of organizations.
+					With 4+ years as a Senior IT Analyst, I excel in optimizing processes and deploying innovative tech
+					solutions. My transition into Data Analytics builds on this foundation, enhancing my skills through
+					hands-on projects that combine IT expertise with data-driven insights. Explore my journey in the <a
+						href="https://anini-a.github.io/web/#projects" target="_blank"><span>project
+							portfolio</span></a>. I am committed to delivering adaptable, data-focused solutions.
 				</p>
 
 				<h4>Area of expertise</h4>
@@ -377,12 +370,6 @@
 
 				</div>
 
-				<h4>Personal Interests</h4>
-				<p>
-					Family-oriented, soccer lover, music enthusiast, engineering documentaries, creating memories
-					with
-					loved ones, and exploring diverse cultures and landscapes bring me joy and fulfillment.
-				</p>
 			</article>
 
 			<!-- Projects -->
