--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 				<h4>Professional Experience</h4>
 				<p>
 					With 4+ years as a Senior IT Analyst, I excel in optimizing processes and deploying innovative tech
-					solutions. My transition into Data Analytics builds on this foundation, enhancing my skills through
+					solutions. <br> My transition into Data Analytics builds on this foundation, enhancing my skills through
 					hands-on projects that combine IT expertise with data-driven insights. Explore my journey in the <a
-						href="https://anini-a.github.io/web/#projects" target="_blank"><span>project
+						href="https://anini-a.github.io/web/#projects" target="_parent"><span>project
 							portfolio</span></a>. I am committed to delivering adaptable, data-focused solutions.
 				</p>
 
