--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<h4>Professional Experience</h4>
 				<p>
 					With 4+ years as a Senior IT Analyst, I excel in optimizing processes and deploying innovative tech
-					solutions. <br> My transition into Data Analytics builds on this foundation, enhancing my skills through
+					solutions. My transition into Data Analytics builds on this foundation, enhancing my skills through
 					hands-on projects that combine IT expertise with data-driven insights. Explore my journey in the <a
 						href="https://anini-a.github.io/web/#projects" target="_parent"><span>project
 							portfolio</span></a>. I am committed to delivering adaptable, data-focused solutions.
@@ -357,11 +357,12 @@
 							<div class="flip-card-back">
 								<div class="education-content">
 									<ul class="subjects-list">
-										<li>Clean and Prepare Data</li>
-										<li>Analyze Data With Python</li>
-										<li>Create vidual Reports</li>
+										<li>Define the Problem</li>
+										<li>Collect, Clean, and Prepare Data</li>
+										<li>Perform Exploratory Data Analysis (EDA)</li>
+										<li>Analyze Data with Python</li>
+										<li>Create Visual Reports</li>
 										<li>Translate Data into Insights</li>
-										<li>Apply Machine Learning Basics</li>
 									</ul>
 								</div>
 							</div>
