--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 									<ul class="subjects-list">
 										<li>Define the Problem</li>
 										<li>Collect, Clean, and Prepare Data</li>
-										<li>Perform Exploratory Data Analysis (EDA)</li>
+										<li>Perform Exploratory Data Analysis</li>
 										<li>Analyze Data with Python</li>
 										<li>Create Visual Reports</li>
 										<li>Translate Data into Insights</li>
