--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 			<!-- Connect -->
 			<article id="connect">
 				<h2 class="major">📃Connect</h2>
-				<span class="image main"><img src="images/resume1.png" alt="" /></span>
+				<!--<span class="image main"><img src="images/resume1.png" alt="" /></span>-->
 				<section>
 
 					<p>Thank you for visiting my website. I appreciate your interest in my work. If you have any
