--- a/index.html
+++ b/index.html
@@ -636,9 +636,9 @@
 
 					<p>Thank you for visiting my website. I appreciate your interest in my work. If you have any
 						questions or would like to discuss potential hiring or project opportunities, I invite you to
-						reach out to me through my LinkedIn, which you can find linked below. I
+						reach out to me through my LinkedIn, which you can find linked below. <br>I
 						look forward to connecting with you and exploring how I can bring value to your team or project.
-						<br>
+						
 
 					</p>
 					<!-- <ul class="actions">
